modifique el titulo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="content">
             <img src="img/logo.jpg" alt="" width="200px" height="200px" class="logo">
-            <h3 class="title">Puerto TECH actualizado</h3>
+            <h3 class="title">Puerto TECH </h3>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing 
                 elit. Tenetur voluptatem deleniti enim quo odit laudantium iste
                  sit voluptates beatae. Totam soluta tenetur, laboriosam aliquid 
